Last last draft of first projects

--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -29,6 +29,8 @@ color: black
 
 <a href="{{ url }}index.html#project9">Project 9: Enhancing SSVEP detection with frequency hopping</a>
 
+<br>
+<br>
 
 <a id="project1"></a>
 
@@ -88,7 +90,8 @@ Insight into mental disorders
 
 **Preferred maximal number of participants:** 8
 
-
+<br>
+<br>
 
 <a id="project2"></a>
 
@@ -116,10 +119,10 @@ Matlab/Octave
 
 **A list of requirements for taking part in the project (education level / English level /all the information you consider important for participants)**
 
-o    BSc program, or higher
-o    English: good
-o    programming languages / other competences: MATLAB®
-o    Knowledge related to auditory cortex/hearing will be advantage
+1. BSc program, or higher
+2. English: good
+3. Programming languages / other competences: MATLAB®
+4. Knowledge related to auditory cortex/hearing will be advantage
 
 **How many non-programming participants can join you during your project, what profession can they be?**
 
@@ -144,6 +147,8 @@ If you are a beginner in electrophysiology data analysis you will learn how to h
 
 **Preferred maximal number of participants:** 6
 
+<br>
+<br>
 
 <a id="project3"></a>
 
@@ -160,8 +165,8 @@ trzeba dac do leadu afiliacje, tytul naukowy, email
 2. Neuropathology resident at UniversitätsSpital Zürich, Switzerland -->
 
 **Abstract**
-Brain Computer Interface allows for control of a machine or a computer without input of your muscles, by sheer force of your mind. There are different forms of BCI’s, some of them use imagined hand movements some measure how relaxed or tense user is, some can distinguish imagined speech of a few sounds and some use users attention to different stimuli. Steady State Visual Evoked Potential based BCI use visual stimuli flickering at different frequencies to detect which one the user is paying the most attention to. This allows for example for a paralysed user in complete locked in state to mentally focus their attention on different flickering stimuli to show intent of control. Usually implemented versions of this BCI use 2-5 LED flickering at frequencies around 8-12 Hz. We present you 2 new devices to experiment with: 
-● state of the art 24-bit 8 channel wireless EEG headset with water/saline based electrodes 
+Brain Computer Interface allows for control of a machine or a computer without input of your muscles, by sheer force of your mind. There are different forms of BCI’s, some of them use imagined hand movements some measure how relaxed or tense user is, some can distinguish imagined speech of a few sounds and some use users attention to different stimuli. Steady State Visual Evoked Potential based BCI use visual stimuli flickering at different frequencies to detect which one the user is paying the most attention to. This allows for example for a paralysed user in complete locked in state to mentally focus their attention on different flickering stimuli to show intent of control. Usually implemented versions of this BCI use 2-5 LED flickering at frequencies around 8-12 Hz. We present you 2 new devices to experiment with: <br>
+● state of the art 24-bit 8 channel wireless EEG headset with water/saline based electrodes <br>
 ● Custom backlight display with 320 programmable backlight segments, allowing for accurate localised dimming and blinking at given frequencies. Frequency resolution 0.01 Hz, customisable blinking patterns: sine, square wave or user provided shape buffer In this project team of 3-6 will tackle a challenge to control an old school adventure game like Beneath a Steel Sky (freeware on https://www.scummvm.org/games/#sky ) using SSVEP based BCI using novel stimulation display. If successful, the project could be expanded to control the whole OS desktop which could upgrade assistive technologies for people suffering from paralysis or trapped in a locked in state. 
 
 
@@ -171,15 +176,15 @@ Python, JavaScript
 
 **A list of requirements for taking part in the project (education level / English level /all the information you consider important for participants)**
 
-● Mandatory: 
-○ Knowledge in Python programming, Linux 
-○ Laptop running x86_64 bit Linux with Python 3.6 (for example Ubuntu 18.04.3 LTS) 
-○ Laptop with HDMI output 
-○ Be ready to get your hair wet 
-● Optional: 
-○ Knowledge of GUI programming: PyQt, PySide, PyGame or other 
-○ Familiarity with machine learning, digital signal processing 
-○ Knowledge of human input device events simulation - getting screenshots, simulating keypresses and mouse clicks from Python 
+1. Mandatory: 
+○ Knowledge in Python programming, Linux <br>
+○ Laptop running x86_64 bit Linux with Python 3.6 (for example Ubuntu 18.04.3 LTS) <br>
+○ Laptop with HDMI output <br>
+○ Be ready to get your hair wet <br> 
+2. Optional: 
+○ Knowledge of GUI programming: PyQt, PySide, PyGame or other <br>
+○ Familiarity with machine learning, digital signal processing <br>
+○ Knowledge of human input device events simulation - getting screenshots, simulating keypresses and mouse clicks from Python <br>
 
 
 **How many non-programming participants can join you during your project, what profession can they be?**
@@ -204,6 +209,8 @@ BCI Design
 
 **Preferred maximal number of participants:** 6
 
+<br>
+<br>
 
 <a id="project4"></a>
 
@@ -242,8 +249,8 @@ JavaScript
 **A list of requirements for taking part in the project (education level / English level /all the information you consider important for participants)**
 
 Please send via email your solution to one of the following problems:
-1) develop a small Vue.js application, details will be available later,
-2) present shortly an example of your choice where precision-recall trade-off can occur and explain what consequences each option may cause. Propose a way of narration and corresponding problem/data visualization design, e.g. (in a form of a drawing). Example interesting areas: health, crime, security.
+1. develop a small Vue.js application, details will be available later,
+2. present shortly an example of your choice where precision-recall trade-off can occur and explain what consequences each option may cause. Propose a way of narration and corresponding problem/data visualization design, e.g. (in a form of a drawing). Example interesting areas: health, crime, security.
 
 
 **How many non-programming participants can join you during your project, what profession can they be?**
@@ -267,6 +274,9 @@ Everyone is welcome to join unless they complete one of the required preliminary
 5. More examples: https://explorabl.es/
 
 **Preferred maximal number of participants:** 12
+
+<br>
+<br>
 
 <a id="project5"></a>
 
@@ -329,6 +339,9 @@ Cognitive science, Human-computer interaction, social sciences, philosophy.... B
 
 **Preferred maximal number of participants:** 10
 
+<br>
+<br>
+
 <a id="project6"></a>
 
 ## Project 6: Reduction of Psychiatric Multimorbidity in a Large Pediatric Sample using EEG and MRI
@@ -373,6 +386,8 @@ identifying biomarkers for psychiatry; limitations of neuroanatomical and neurop
 
 **Preferred maximal number of participants:** 7
 
+<br>
+<br>
 
 <a id="project7"></a>
 
@@ -433,6 +448,8 @@ artists, medical specialists (+1-2, not included in the overall participant coun
 
 **Preferred maximal number of participants:** 6
 
+<br>
+<br>
 
 <a id="project8"></a>
 
@@ -482,54 +499,8 @@ exploratory data analysis, spacial analysis
 
 **Preferred maximal number of participants:** 10
 
-<a id="project8"></a>
-
-## Project 8: Researching the relationships between voting patterns and geographically bonded environments of voters
-
-
-#### Authors: Jan Skorupiński, Michał Drygajło
-
-
-<!--
-
-trzeba dac do leadu afiliacje, tytul naukowy, email
-1. University hospital of Zurcih, Switzerland
-2. Neuropathology resident at UniversitätsSpital Zürich, Switzerland -->
-
-**Abstract**
- 
-Environmental neuroscience points to significance of subject’s surroundings to its brain and behaviour. The impact of the environment is undoubtedly visible, not only in everyday life, eg. the influence walk in park versus walk in the city's streets or school performance impacted by CO2 in the room but also in more profound situations like by predicting election results by looking on open source demographic data (see case of https://fivethirtyeight.com/). Research by Huang et al. (2013) shows the link between the sense of invulnerability and attitude towards socially excluded. Kanai R at el. (2011) found that political attitudes has a counterpart in brain structure.
-Psychologist know very well that one of the main downsides of research based on questionnaires is the necessity to mask the real purpose of questioning line. The difference between political polls and actual results of given elections are a good example of what may happen if the auto-presentation strategies are interfering. The advantage of an actual voting results is the obvious sense of anonymity of the voters.
-In this project we would like to look for possible correlation between the voting results and the environment represented by the geographical location. By having collected several voting results we can look for changes in time of politician’s support and then look for significant changes in the environment. We will look at ways to translate the politicians alliances and/or their political program with the everyday life surrounding of their voters environment.
-
-**Programming languages that are going to be used in the project**:
-
-Python
-
-**A list of requirements for taking part in the project (education level / English level /all the information you consider important for participants)**
-
-- conversational English
-- ability to do basic data transformations in python (pandas)
-- some experience in Machine Learning (NLP, classical ML algorithms such as regression, - random forest, basic understanding of NN)
-- programming skills in Python, Tensorflow or PyTorch
-
-**How many non-programming participants can join you during your project, what profession can they be?**
-
-up to 3 people from Sociology, Political Science, Geographic Information Specialist
-
-**What participants gain/learn from this project:**
-
-exploratory data analysis, spacial analysis
-
-**A list of 1-5 key papers / online materials summarising the subject:**
-
-
-1. Kanai R., Feilden T., Firth C., Rees G., Political Orientations Are Correlated with Brain Structure in Young Adults, Current Biology 21, 677–680, April 26, 2011, DOI:10.1016/j.cub.2011.03.017 
-2. Huang J.Y., Ackerman J.M., Bargh J.A., Superman to the rescue: Simulating physical invulnerability attenuates exclusion-re
-3. Dlated interpersonal biases. Journal of Experimental Social Psychology 3, Vol. 49, Issue 3, 349-354 (2013) DOI:10.1016/j.jesp.2012.12.007 3) https://en.wikipedia.org/wiki/FiveThirtyEight
-
-**Preferred maximal number of participants:** 10
-
+<br>
+<br>
 
 <a id="project9"></a>
 
