Last last draft of first projects

--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -5,9 +5,9 @@ color: black
 ---
 # Projects
 
----
 
 --
+
 
 <a href="{{ url }}index.html#project1"> Project 1: Mentally Disordered Agents </a>
 
@@ -166,8 +166,8 @@ trzeba dac do leadu afiliacje, tytul naukowy, email
 
 **Abstract**
 Brain Computer Interface allows for control of a machine or a computer without input of your muscles, by sheer force of your mind. There are different forms of BCI’s, some of them use imagined hand movements some measure how relaxed or tense user is, some can distinguish imagined speech of a few sounds and some use users attention to different stimuli. Steady State Visual Evoked Potential based BCI use visual stimuli flickering at different frequencies to detect which one the user is paying the most attention to. This allows for example for a paralysed user in complete locked in state to mentally focus their attention on different flickering stimuli to show intent of control. Usually implemented versions of this BCI use 2-5 LED flickering at frequencies around 8-12 Hz. We present you 2 new devices to experiment with: <br>
-● state of the art 24-bit 8 channel wireless EEG headset with water/saline based electrodes <br>
-● Custom backlight display with 320 programmable backlight segments, allowing for accurate localised dimming and blinking at given frequencies. Frequency resolution 0.01 Hz, customisable blinking patterns: sine, square wave or user provided shape buffer In this project team of 3-6 will tackle a challenge to control an old school adventure game like Beneath a Steel Sky (freeware on https://www.scummvm.org/games/#sky ) using SSVEP based BCI using novel stimulation display. If successful, the project could be expanded to control the whole OS desktop which could upgrade assistive technologies for people suffering from paralysis or trapped in a locked in state. 
+1. State of the art 24-bit 8 channel wireless EEG headset with water/saline based electrodes <br>
+2. Custom backlight display with 320 programmable backlight segments, allowing for accurate localised dimming and blinking at given frequencies. Frequency resolution 0.01 Hz, customisable blinking patterns: sine, square wave or user provided shape buffer In this project team of 3-6 will tackle a challenge to control an old school adventure game like Beneath a Steel Sky (freeware on https://www.scummvm.org/games/#sky ) using SSVEP based BCI using novel stimulation display. If successful, the project could be expanded to control the whole OS desktop which could upgrade assistive technologies for people suffering from paralysis or trapped in a locked in state. 
 
 
 **Programming languages that are going to be used in the project**:
