--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -36,7 +36,6 @@ color: black
 
 ## Project 1: Mentally Disordered Agents
 
-
 #### Authors: Paweł Pierzchlewicz
 
 <!--
@@ -45,7 +44,6 @@ trzeba dac do leadu afiliacje, tytul naukowy, email
 1. University hospital of Zurcih, Switzerland
 2. Neuropathology resident at UniversitätsSpital Zürich, Switzerland -->
 
-**Abstract**
 Psychiatric disorders are one of the major concerns of the XXI century. Depression, anxiety, addiction and others are becoming significantly more prominent in our society. Yet their mechanisms remain elusive. With the growing variety of computational tools we are beginning to be able to model them, hoping that this will provide a better understanding and allow to overcome the problem. One of these methods is reinforcement learning, which gives insight into the process of decision making.
 
 Reinforcement Learning introduces a playground for testing hypotheses, through building tailored environments, agents perform certain behavioural tasks. It stems from the mathematical description of dopamine, the reward neuromodulator. This allows to model how the brain chooses and values certain actions to achieve set goals. Computational Psychiatry has been using reinforcement learning to figure out what might be causing various mental illnesses. A potential hypothesis could be that the policy (the probability of taking a certain action in a given state) has fallen into the trap of a local maximum of the return function (the total reward received).
@@ -54,6 +52,7 @@ This project aims to hijack the established playground enabling testing even the
 
 Our main goal will be to explore how the environment influences the behaviour of the agent. We can also examine if changing the way the agent learns about the environment might cause suboptimal behaviour. A basic model for the agent and environment will be provided and we will work on extending them to achieve desired results.
 
+![test image size]({{ site.url }}/img/projects/project1.png?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}
 
 **Programming languages that are going to be used in the project**:
 
@@ -61,28 +60,25 @@ Python
 
 **A list of requirements for taking part in the project (education level / English level /all the information you consider important for participants)**
 
-Conversational English with ease of reading scientific papers.
-Reinforcement Learning Basics (preferred)
-Experience with some deep learning framework (Keras, Tensorflow, PyTorch)
-Linear Algebra
+1. Conversational English with ease of reading scientific papers.
+2. Reinforcement Learning Basics (preferred)
+3. Experience with some deep learning framework (Keras, Tensorflow, PyTorch)
+4. Linear Algebra
 
 **What participants gain/learn from this project:**
 
-Reinforcement Learning Basics
-Computational Psychiatry
-Coding Skills
-Insight into mental disorders
-
+1. Reinforcement Learning Basics
+2. Computational Psychiatry
+3. Coding Skills
+4. Insight into mental disorders
 
 **A list of 1-5 key papers / online materials summarising the subject:**
 
-
-1. Adams, R. A., Huys, Q. J. M., & Roiser, J. P. (2016). Computational Psychiatry: Towards a mathematically informed understanding of mental illness. Journal of Neurology, Neurosurgery and Psychiatry, 87(1), 53–63. https://doi.org/10.1136/jnnp-2015-310737
+1. Adams, R. A., Huys, Q. J. M., & Roiser, J. P. (2016). Computational Psychiatry: Towards a mathematically informed understanding of mental illness. Journal of Neurology, Neurosurgery and Psychiatry, 87(1), 53–63. [https://doi.org/10.1136/jnnp-2015-310737](https://doi.org/10.1136/jnnp-2015-310737)
 2. Dayan, P. (2009). Dopamine, Reinforcement Learning, and Addiction.
-3. Redish, A. D., Jensen, S., & Johnson, A. (2008). A unified framework for addiction: Vulnerabilities in the decision process. Behavioral and Brain Sciences, 31(4), 415–487. https://doi.org/10.1017/S0140525X0800472X
-4. Sharp, P. B., & Eldar, E. (2019). Computational Models of Anxiety: Nascent Efforts and Future Directions. Current Directions in Psychological Science, 28(2), 170–176. https://doi.org/10.1177/0963721418818441
-5. Mkrtchian, A., Aylward, J., Dayan, P., Roiser, J. P., & Robinson, O. J. (2017). Modeling Avoidance in Mood and Anxiety Disorders Using Reinforcement Learning. Biological Psychiatry, 82(7), 532–539. https://doi.org/10.1016/j.biopsych.2017.01.017
-
+3. Redish, A. D., Jensen, S., & Johnson, A. (2008). A unified framework for addiction: Vulnerabilities in the decision process. Behavioral and Brain Sciences, 31(4), 415–487. [https://doi.org/10.1017/S0140525X0800472X] (https://doi.org/10.1017/S0140525X0800472X)
+4. Sharp, P. B., & Eldar, E. (2019). Computational Models of Anxiety: Nascent Efforts and Future Directions. Current Directions in Psychological Science, 28(2), 170–176. [https://doi.org/10.1177/0963721418818441](https://doi.org/10.1177/0963721418818441)
+5. Mkrtchian, A., Aylward, J., Dayan, P., Roiser, J. P., & Robinson, O. J. (2017). Modeling Avoidance in Mood and Anxiety Disorders Using Reinforcement Learning. Biological Psychiatry, 82(7), 532–539. [https://doi.org/10.1016/j.biopsych.2017.01.017](https://doi.org/10.1016/j.biopsych.2017.01.017)
 
 **Preferred maximal number of participants:** 8
 
@@ -96,7 +92,6 @@ Insight into mental disorders
 <a id="project2"></a>
 
 ## Project 2: Making sense of sounds: what can we learn from neural activity in primary auditory cortex
-
 
 #### Authors: Magdalena Sołyga
 
@@ -112,6 +107,7 @@ While performing multi-unit extracellular recordings, we collect an enormous amo
 The aim of the project is to explore the number of questions which can be answered while analyzing a set of electrophysiology data acquired from two primary auditory cortices in mice (Solyga & Barkat, 2019). Participants would have freedom to test how properties of auditory neural responses change for sounds with different parameters, in different auditory regions and layers and try to decide which of the parameter reflects according to them the most useful information on auditory stimuli. 
 Through the project, you will gain a basic understanding of acquiring and analyzing multi-unit electrophysiological data and get a chance to test your own hypothesis. This project aims to emphasize the sheer amount of information we can get from one set of recordings and that electrophysiological data should be widely shared to exploit them fully.
 
+![test image size]({{ site.url }}/img/projects/project2.png?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}
 
 **Programming languages that are going to be used in the project**:
 
@@ -126,16 +122,13 @@ Matlab/Octave
 
 **What participants gain/learn from this project:**
 
-Basic understanding of experimental approaches in auditory neuroscience
-Experimental and analysis flow of multi-unit extracellular recordings
-Hands on session with data analysis
-Testing own hypothesis
-If you are a beginner in electrophysiology data analysis you will learn how to handle data to represent basic neural response’s parameters. If you have already experience, you can discover totally new facts about sounds processing in mouse auditory cortex. 
-
-
+1. Basic understanding of experimental approaches in auditory neuroscience
+2. Experimental and analysis flow of multi-unit extracellular recordings
+3. Hands on session with data analysis
+4. Testing their own hypothesis
+5. If you are a beginner in electrophysiology data analysis you will learn how to handle data to represent basic neural response’s parameters. If you have already experience, you can discover totally new facts about sounds processing in mouse auditory cortex. 
 
 **A list of 1-5 key papers / online materials summarising the subject:**
-
 
 1. Sołyga, M., & Barkat, T. R. (2019). Distinct processing of tone offset in two primary auditory cortices. Scientific reports, 9(1), 1-12.
 2. King, A. J., Teki, S., & Willmore, B. D. (2018). Recent advances in understanding the auditory cortex. F1000Research, 7.
@@ -154,9 +147,7 @@ Musicians or biologists (max 2)
 
 ## Project 3: Game controlled by SSVEP paradigm using Blinker device (https://braintech.pl/blinker)
 
-
 #### Authors: Maciej Pawlisz, Marian Dovgialo
-
 
 <!--
 
@@ -168,7 +159,6 @@ trzeba dac do leadu afiliacje, tytul naukowy, email
 Brain Computer Interface allows for control of a machine or a computer without input of your muscles, by sheer force of your mind. There are different forms of BCI’s, some of them use imagined hand movements some measure how relaxed or tense user is, some can distinguish imagined speech of a few sounds and some use users attention to different stimuli. Steady State Visual Evoked Potential based BCI use visual stimuli flickering at different frequencies to detect which one the user is paying the most attention to. This allows for example for a paralysed user in complete locked in state to mentally focus their attention on different flickering stimuli to show intent of control. Usually implemented versions of this BCI use 2-5 LED flickering at frequencies around 8-12 Hz. We present you 2 new devices to experiment with: <br>
 1. State of the art 24-bit 8 channel wireless EEG headset with water/saline based electrodes <br>
 2. Custom backlight display with 320 programmable backlight segments, allowing for accurate localised dimming and blinking at given frequencies. Frequency resolution 0.01 Hz, customisable blinking patterns: sine, square wave or user provided shape buffer In this project team of 3-6 will tackle a challenge to control an old school adventure game like Beneath a Steel Sky (freeware on https://www.scummvm.org/games/#sky ) using SSVEP based BCI using novel stimulation display. If successful, the project could be expanded to control the whole OS desktop which could upgrade assistive technologies for people suffering from paralysis or trapped in a locked in state. 
-
 
 **Programming languages that are going to be used in the project**:
 
@@ -188,13 +178,11 @@ Python, JavaScript
 
 **What participants gain/learn from this project:**
 
-Hands on experience of real-time analysis of EEG signals 
-Assistive technology design 
-BCI Design
-
+1. Hands on experience of real-time analysis of EEG signals 
+2. Assistive technology design 
+3. BCI Design
 
 **A list of 1-5 key papers / online materials summarising the subject:**
-
 
 1. https://braintech.pl/bci/?lang=en 
 2. https://braintech.pl/bci/?lang=en#bci-ssvep 
@@ -215,9 +203,7 @@ None
 
 ## Project 4: False positives visualized - an explorable exploration
 
-
 #### Authors: Piotr Migdał, Katarzyna Kańska
-
 
 <!--
 
@@ -230,16 +216,15 @@ trzeba dac do leadu afiliacje, tytul naukowy, email
 Classification errors take place everywhere - from machine learning classifiers, through medical decisions, to juridical verdicts. Very often the options are not symmetric and there is a trade-off on how we balance different kinds of errors (e.g. sentencing an innocent person vs letting free a guilty one).   
 
 In this project, we develop interactive explanations of different error measures (e.g. precision and recall) with concrete examples, showing:
-- what do they represent,
-- where they are insightful or misleading.
+1. what do they represent,
+2. where they are insightful or misleading.
 
 The project will have three main parts (you may take part in one, two or all of these activities):
-- writing interactive stories with concrete examples
-- designing data visualizations
-- developing a Vue.js application
+1. writing interactive stories with concrete examples
+2. designing data visualizations
+3. developing a Vue.js application
 
 As a result, we want to extend a project "Which ML are you?" [https://github.com/stared/which-ml-are-you] which can be a powerful tool for learning how to use and interpret common information retrieval metrics.
-
 
 **Programming languages that are going to be used in the project**:
 
@@ -253,11 +238,10 @@ Please send via email your solution to one of the following problems:
 
 **What participants gain/learn from this project:**
 
-1. presenting scientific content in an accessible way
-2. developing a Vue.js application for interactive data visualization
+1. Presenting scientific content in an accessible way
+2. Developing a Vue.js application for interactive data visualization
 
 **A list of 1-5 key papers / online materials summarising the subject:**
-
 
 1. Tom Fawcett, An introduction to ROC analysis, https://people.inf.elte.hu/kiss/13dwhdm/roc.pdf
 2. Problem explanation: https://victorzhou.com/blog/intro-to-random-forests/
@@ -278,9 +262,7 @@ Everyone is welcome to join unless they complete one of the required preliminary
 
 ## Project 5: Talking with Machine Learning models using chatbots
 
-
 #### Authors: Michał Kuźba
-
 
 <!--
 
@@ -297,12 +279,13 @@ Why don't we talk to the model to ask and understand more about the decisions it
 Imagine ML model being interrogated for doing biased, wrong or weird decisions.
 
 What can we do?
-* train some interesting models (medical, financial, legal, including biases, etc.)
-* create a dialogue system as an interface for the model
-* work on explaining model decisions
-* find interesting questions to be asked for the model
-* anything that comes to your mind and we might do using chatbot as an interface for the Machine Learning model (any ideas are welcome)
+1. train some interesting models (medical, financial, legal, including biases, etc.)
+2. create a dialogue system as an interface for the model
+3. work on explaining model decisions
+4. find interesting questions to be asked for the model
+5. anything that comes to your mind and we might do using chatbot as an interface for the Machine Learning model (any ideas are welcome)
 
+![test image size]({{ site.url }}/img/projects/project5.png?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}
 
 **Programming languages that are going to be used in the project**:
 
@@ -310,16 +293,15 @@ Python, R, JavaScript
 
 **A list of requirements for taking part in the project (education level / English level /all the information you consider important for participants)**
 
-English: good
-The ability to train a simple Machine Learning model will be helpful.
+1. English: good
+2. The ability to train a simple Machine Learning model will be helpful.
 
 **What participants gain/learn from this project:**
 
-1. opportunity to participate in the process of developing a chatbot - from design to programming, testing, deploying and talking to it
-2. opportunity to do something creative and fun
+1. Opportunity to participate in the process of developing a chatbot - from design to programming, testing, deploying and talking to it
+2. Opportunity to do something creative and fun
 
 **A list of 1-5 key papers / online materials summarising the subject:**
-
 
 1. https://christophm.github.io/interpretable-ml-book/ (book about interpretable ML) 
 2. https://github.com/kmichael08/kmichael08.github.io/blob/master/XAIbot___poster-v1.pdf (poster summarizing a project in that area)
@@ -339,10 +321,7 @@ Cognitive science, Human-computer interaction, social sciences, philosophy.... B
 
 ## Project 6: Reduction of Psychiatric Multimorbidity in a Large Pediatric Sample using EEG and MRI
 
-
-
 #### Authors: Nicolas Langer
-
 
 <!--
 
@@ -360,14 +339,15 @@ Python, R, Matlab/Octave
 
 **A list of requirements for taking part in the project (education level / English level /all the information you consider important for participants)**
 
-knowledge in neuroscience and psychology, data science and statistics
+1. Knowledge in neuroscience and psychology
+2. Practice in data science and statistics
 
 **What participants gain/learn from this project:**
 
-identifying biomarkers for psychiatry; limitations of neuroanatomical and neurophysiological measures in psychiatry
+1. Identifying biomarkers for psychiatry
+2. Learning about limitations of neuroanatomical and neurophysiological measures in psychiatry
 
 **A list of 1-5 key papers / online materials summarising the subject:**
-
 
 1. Woo et al. 2018: Building better biomarkers: brain models in translational neuroimaging
 
@@ -384,9 +364,7 @@ psychologist with knowledge about developmental disorders
 
 ## Project 7: alidating quantitative susceptibility mapping (QSM) at 3T and 9.4T
 
-
 #### Authors: Anastasia Lado, Elisa Tuzzi, Gisela Hagberg
-
 
 <!--
 
@@ -406,6 +384,8 @@ To address these issues several processing steps are required:
 3. Field-to-source inversion.
 Several algorithms exist to calculate each of these processing steps.
 In our project, we want to validate these processing algorithms on phantom data with known underlying sources of the magnetic susceptibility.
+
+![test image size]({{ site.url }}/img/projects/project7.png?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}
 
 **Programming languages that are going to be used in the project**:
 
@@ -443,9 +423,7 @@ artists, medical specialists (+1-2, not included in the overall participant coun
 
 ## Project 8: Researching the relationships between voting patterns and geographically bonded environments of voters
 
-
 #### Authors: Jan Skorupiński, Michał Drygajło
-
 
 <!--
 
@@ -457,6 +435,7 @@ trzeba dac do leadu afiliacje, tytul naukowy, email
  
 Environmental neuroscience points to significance of subject’s surroundings to its brain and behaviour. The impact of the environment is undoubtedly visible, not only in everyday life, eg. the influence walk in park versus walk in the city's streets or school performance impacted by CO2 in the room but also in more profound situations like by predicting election results by looking on open source demographic data (see case of https://fivethirtyeight.com/). Research by Huang et al. (2013) shows the link between the sense of invulnerability and attitude towards socially excluded. Kanai R at el. (2011) found that political attitudes has a counterpart in brain structure.
 Psychologist know very well that one of the main downsides of research based on questionnaires is the necessity to mask the real purpose of questioning line. The difference between political polls and actual results of given elections are a good example of what may happen if the auto-presentation strategies are interfering. The advantage of an actual voting results is the obvious sense of anonymity of the voters.
+
 In this project we would like to look for possible correlation between the voting results and the environment represented by the geographical location. By having collected several voting results we can look for changes in time of politician’s support and then look for significant changes in the environment. We will look at ways to translate the politicians alliances and/or their political program with the everyday life surrounding of their voters environment.
 
 **Programming languages that are going to be used in the project**:
@@ -465,10 +444,10 @@ Python
 
 **A list of requirements for taking part in the project (education level / English level /all the information you consider important for participants)**
 
-- conversational English
-- ability to do basic data transformations in python (pandas)
-- some experience in Machine Learning (NLP, classical ML algorithms such as regression, - random forest, basic understanding of NN)
-- programming skills in Python, Tensorflow or PyTorch
+1. Conversational English
+2. Ability to do basic data transformations in python (pandas)
+3. Some experience in Machine Learning (NLP, classical ML algorithms such as regression, - random forest, basic understanding of NN)
+4. Programming skills in Python, Tensorflow or PyTorch
 
 **What participants gain/learn from this project:**
 
@@ -493,9 +472,7 @@ up to 3 people from Sociology, Political Science, Geographic Information Special
 
 ## Project 9: Enhancing SSVEP detection with frequency hopping
 
-
 #### Authors: Tomasz Necio, Zuzanna Lewandowska
-
 
 <!--
 
